
  * checks/debconf:
    + [JvW] Teach lintian to know about the 'error' debconf template
      question type. (Closes: #374399)
    + [RA] Exclude debconf templates with "for internal use" in the short
      description from style checks and document this in the log
      description of the tags most likely to trigger on internal
      templates.  (Closes: #368206)
  * checks/fields:
    + [RA] Allow build-depend on quilt if clean depends on the xsfclean
      rule, for packages maintained by the X Strike Force.
    + [RA] CDBS packages that use the python-distutils class should list
      Python in Build-Depends, not Build-Depends-Indep, since CDBS wants
      to use it in debian/rules clean.  Thanks, Jan Lübbe.
    + [HE] Add check for build-deps on build-essential. Yes, people do that.
    + [RA] Recognize direct invocations of quilt in clean rules and allow
      Build-Depends on quilt in that case.  Reported by Sam Hocevar.
      (Closes: #374878)
    + [RA] Fix handling of versioned Build-Depends to avoid spurious
      build-depends-without-arch-dep warnings.  Reported by Marcus
      Better.
    + [RA] Don't require Build-Depends on perl even if run explicitly in
      debian/rules clean, since perl-base may be sufficient.  Catch more
      ways perl could be run, including the common idiom for packages that
      use Build.PL.
  * checks/po-debconf:
    + [RA] Don't consider templates.in to be a stray translated template
      file.  Thanks, Thomas Huriaux.  (Closes: #367534)

 -- Russ Allbery <rra@debian.org>  Sat, 24 Jun 2006 20:26:24 -0700

lintian (1.23.21) unstable; urgency=low

  * checks/menus:
    + [RA] Tell Perl where common_data.pm is since we're now including it.
      Doh.  Thanks, Nelson A. de Oliveira.  (Closes: #366481)

 -- Russ Allbery <rra@debian.org>  Mon,  8 May 2006 18:52:45 -0700

lintian (1.23.20) unstable; urgency=low

  The "Policy backlog clearing is a wonderful sight" release

  * checks/debconf{.desc,}: